@@ -63,32 +63,9 @@ Description: Mono runtime - common files
  MIPS architectures. Optionally this package configures BINFMT support.
 
 Package: mono-runtime
-Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         mono-runtime-sgen (= ${binary:Version})
-Description: Mono runtime - default version
- Mono is a platform for running and developing applications based on the
- ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
- Mono provides a complete CLR (Common Language Runtime) including compiler and
- runtime, which can produce and execute CIL (Common Intermediate Language)
- bytecode (aka assemblies), and a class library.
- .
- This package contains the Virtual Machine, JIT (Just-in-Time) and
- AOT (Ahead-of-Time) code generator "mono-sgen".
- mono-sgen executes applications for the CLI (Common Language Infrastructure).
- Mono currently only supports the X86, PowerPC, ARM, S/390x, AMD64 and
- MIPS architectures.
- .
- This package installs this architecture's default runtime version.
-
-Package: mono-runtime-sgen
-Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         mono-runtime-common (= ${binary:Version})
-Homepage: http://www.mono-project.com/Compacting_GC
-Description: Mono runtime - SGen
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Mono runtime
  Mono is a platform for running and developing applications based on the
  ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
  Mono provides a complete CLR (Common Language Runtime) including compiler and
@@ -132,7 +109,7 @@ Section: debug
 Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Replaces: mono-jit-dbg (<< 2.4)
 Conflicts: mono-jit-dbg (<< 2.4)
-Depends: ${misc:Depends}, mono-runtime-sgen (= ${binary:Version})
+Depends: ${misc:Depends}
 Recommends: gdb
 Description: Mono runtime, debugging symbols
  Mono is a platform for running and developing applications based on the
@@ -177,7 +154,6 @@ Package: mono-complete
 Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${misc:Depends},
          mono-runtime (= ${binary:Version}),
-         mono-runtime-sgen (= ${binary:Version}) [amd64 armel arm64 armhf i386 kfreebsd-amd64 kfreebsd-i386 s390x],
          mono-llvm-support (= ${binary:Version}) [amd64 i386],
          libmono-2.0-1 (= ${binary:Version}),
          libmono-profiler (= ${binary:Version}),
@@ -210,10 +186,10 @@ Description: complete Mono runtime, development tools and all libraries
  You should build-depend on cli-common-dev and the needed libraries instead.
 
 Package: libmono-2.0-1
-Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: any 
 Replaces: libmono-dev (<= 1.1.6-4)
 Conflicts: mono-utils (<< 1.2.3.1-4)
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonosgen-2.0-1 (= ${binary:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Mono JIT library (Default version)
  Shared library for Mono, used for embedding/hosting of the JIT.
  .
@@ -225,48 +201,9 @@ Description: Mono JIT library (Default version)
 
 Package: libmono-2.0-dev
 Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${misc:Depends}, libmonosgen-2.0-dev (= ${binary:Version})
+Depends: ${misc:Depends}
 Description: Mono JIT library - Development files (Default version)
  Header files and static libraries for libmono-2.0.
- .
- Mono is a platform for running and developing applications based on the
- ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
- Mono provides a complete CLR (Common Language Runtime) including compiler and
- runtime, which can produce and execute CIL (Common Intermediate Language)
- bytecode (aka assemblies), and a class library.
-
-Package: libmonosgen-2.0-1
-Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Mono JIT library (SGen GC)
- Shared library for Mono, used for embedding/hosting of the JIT.
- .
- Mono is a platform for running and developing applications based on the
- ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
- Mono provides a complete CLR (Common Language Runtime) including compiler and
- runtime, which can produce and execute CIL (Common Intermediate Language)
- bytecode (aka assemblies), and a class library.
-
-Package: libmonosgen-2.0-1-dbg
-Priority: extra
-Section: debug
-Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${misc:Depends}, libmonosgen-2.0-1 (= ${binary:Version})
-Recommends: gdb
-Description: Mono JIT library, debugging symbols (SGen GC)
- This package contains the debugging symbols of the Mono JIT library.
- .
- Mono is a platform for running and developing applications based on the
- ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
- Mono provides a complete CLR (Common Language Runtime) including compiler and
- runtime, which can produce and execute CIL (Common Intermediate Language)
- bytecode (aka assemblies), and a class library.
-
-Package: libmonosgen-2.0-dev
-Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${misc:Depends}, libmonosgen-2.0-1 (= ${binary:Version})
-Description: Mono JIT library - Development files (SGen GC)
- Header files and static libraries for libmonosgen-2.0.
  .
  Mono is a platform for running and developing applications based on the
  ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
