@@ -1,1 +1,2 @@
 /usr/lib/*/libmono-2.0.so.1*
+/usr/lib/*/libmonosgen-2.0.so.*
