@@ -1,4 +1,7 @@
 usr/lib/*/libmono-2.0.so
 usr/lib/*/libmono-2.0.a
 usr/lib/*/pkgconfig/mono-2.pc
+usr/lib/*/libmonosgen-2.0.so
+usr/lib/*/libmonosgen-2.0.a
+usr/lib/*/pkgconfig/monosgen-2.pc
 usr/include/
