@@ -1,1 +1,0 @@
-/usr/lib/*/libmonosgen-2.0.so.*
