@@ -1,3 +1,0 @@
-usr/lib/*/libmonosgen-2.0.so
-usr/lib/*/libmonosgen-2.0.a
-usr/lib/*/pkgconfig/monosgen-2.pc
