@@ -1,6 +1,7 @@
 mono (6.12.0.114-0labft6) testing; urgency=medium
 
-  * Первый публичный релиз.
+  * Пакеты libmonosgen* объединены с libmono*.
+  * Пакет mono-runtime-sgen объединен с mono-runtime.
 
  -- Лаборатория 50 <team@lab50.net>  Thu, 21 Jan 2021 20:58:51 +0300
 
